# visa-clearing-file-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  v_parser.py  visa_dict.py
.github/workflows/: build.yml  publish.yml  test.yml
src/visa_clearing/: parser.py
test/: conftest.py  test_parser.py
tests/: __init__.py  sitecustomize.py  test_parser.py
